# korg

./: .dockerignore  .gitignore  .sprint-deploy  Cargo.toml  Dockerfile  README.md  justfile
.cargo/: config.toml
.claude/skills/deploy-kubsdb/: SKILL.md
.github/workflows/: ci.yml
crates/korg-api/: Cargo.toml
crates/korg-api/src/: error.rs  lib.rs  main.rs
crates/korg-api/tests/: api.rs  contract.rs  handoff.rs  mcp_http.rs  sweep.rs
crates/korg-api/tests/common/: mod.rs
crates/korg-core/: Cargo.toml
crates/korg-core/migrations/: 0001_init.sql  0002_link.sql  0003_slot.sql  0004_link_disposition.sql  0005_slot_unique.sql  0006_relationship_unique.sql  0007_comment_node_rename.sql  0008_sprint_proposal.sql  0009_identity.sql  0010_report.sql  0011_project_meta.sql  0012_daily_planning.sql  0013_project_touch.sql  0014_relationship_orientation.sql  0015_node_sequence_fresh_install.sql  0016_linking_corpus_true_up.sql  0017_handoff.sql
crates/korg-core/src/: config.rs  daily_plan.rs  error.rs  lib.rs  ops.rs  relationships.rs  repo.rs  slots.rs  topics.rs  vocab.rs
crates/korg-core/tests/: api_repo.rs  config.rs  daily_plan.rs  domain.rs  handoff.rs  identity.rs  proposals.rs  reads.rs  relationships.rs  reports.rs  schema.rs  selectors.rs  slots.rs  sprint010.rs  sprint012.rs
crates/korg-mcp/: Cargo.toml
crates/korg-mcp/src/: lib.rs  main.rs  tools.rs
crates/korg-mcp/tests/: dispatch.rs  docs_drift.rs  handoff.rs  reports.rs  schema.rs  server.rs  sweep.rs  tools_schema.json
crates/korg-mcp/tests/common/: mod.rs
crates/korg-migrate/: Cargo.toml
crates/korg-migrate/src/: import.rs  lib.rs  main.rs  source.rs
crates/korg-migrate/tests/: fidelity.rs  import_smoke.rs  read_sources.rs
crates/korg-migrate/tests/common/: mod.rs
crates/korg-test-support/: Cargo.toml
crates/korg-test-support/src/: lib.rs
docs/: api.md  migration.md  operations.md  setup.md  usage.md
scripts/: e2e-sticky-check.sh  mcp-live-check.py  mcp-roundtrip-check.sh  post-deploy-check.sh  snapshot.sh
sprints/001-wi-update/: DEPLOY.md  PLAN.md
sprints/002-mcp-coverage/: DEPLOY.md  PLAN.md
sprints/003-wi-comments/: DEPLOY.md  PLAN.md
sprints/004-sprint-proposal/: DEPLOY.md  PLAN.md
sprints/005-daily-reports/: PLAN.md
sprints/006-work-item-survey/: DEPLOY.md  PLAN.md
sprints/007-korg-dogfood-round-2/: SPRINT.md
sprints/008-directed-relationships-plan-view/: README.md
sprints/009-find-preview-navigate/: README.md
sprints/010-done-status-comments-projects/: README.md
sprints/011-replace-slots-with-source-linked-daily-planning/: README.md
sprints/012-agent-api-ui-cleanup/: README.md
sprints/013-core-integrity-errors-honest-mutations/: README.md
sprints/014-relationship-semantics-label-registry/: README.md
sprints/015-response-contracts-envelopes-get-proposal/: README.md
sprints/016-one-contract-source/: README.md
sprints/017-name-keyed-selectors/: README.md
sprints/018-truth-in-docs-and-ops/: README.md
sprints/019-ui-robustness-and-access/: README.md
sprints/020-test-consolidation-and-coverage-sweep/: README.md
sprints/021-linking-layer-deep-review/: README.md
sprints/022-linking-lb-1-corpus-true-up/: README.md
sprints/023-linking-lb-2-enforcement-provenance/: README.md
sprints/024-linking-lb-3-edge-context-reads/: README.md
sprints/025-handoff-h1-node-core-api/: README.md
sprints/026-handoff-h2-surfaces/: README.md
sprints/planning/: 2026-07-21-handoff-node-plan.md  2026-07-23-agent-space-direction.md
sprints/planning/2026-07-23-linking-layer/: REVIEW.md  SUMMARY.md
sprints/review/: 2026-07-21-review-prompt.md  REVIEW.md
web/: .gitignore  eslint.config.js  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts
web/src/: app.css  app.d.ts  app.html
web/src/lib/: api.ts  dates.ts  domain.ts  markdown.ts  toast.svelte.ts  urls.ts
web/src/lib/components/: Comments.svelte  ConfirmButton.svelte  Dialog.svelte  ErrorNotice.svelte  MultiSelectFilter.svelte  NodePreview.svelte  Toaster.svelte  TopicPicker.svelte  WorkItemForm.svelte
web/src/routes/: +layout.svelte  +layout.ts  +page.svelte
web/src/routes/cards/: +page.svelte
web/src/routes/daily-reports/: +page.svelte
web/src/routes/history/: +page.svelte
web/src/routes/link-up/: +page.svelte
web/src/routes/plan/: +page.svelte
web/src/routes/planning/: +page.svelte
web/src/routes/reading-list/: +page.svelte
web/src/routes/topics/: +page.svelte
web/src/routes/work-items/: +page.svelte
web/tests/e2e/: a11y.spec.ts  area-add.spec.ts  card-edit.spec.ts  card-filters.spec.ts  card-links.spec.ts  card-plan-drag.spec.ts  cards-dnd.spec.ts  cut-autohide.spec.ts  daily-planner.spec.ts  destructive-confirm.spec.ts  dialog-focus.spec.ts  error-surfacing.spec.ts  handoff.spec.ts  history-topics.spec.ts  link-up.spec.ts  planning-project.spec.ts  slot-schedule.spec.ts  smoke.spec.ts  theme-contrast.spec.ts  work-item-comments.spec.ts  work-item-edit.spec.ts  work-item-markdown.spec.ts  work-item-project-sticky.spec.ts  work-items.spec.ts
