[workspace]
resolver = "2"
members = [
    "crates/korg-core",
    "crates/korg-migrate",
    "crates/korg-mcp",
    "crates/korg-api",
]

[workspace.package]
edition = "2021"
rust-version = "1.85"
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8", default-features = false, features = [
    "postgres",
    "runtime-tokio",
    "tls-rustls",
    "macros",
    "time",
    "rust_decimal",
    "migrate",
    "uuid",
] }
rust_decimal = { version = "1", features = ["serde", "db-postgres"] }

# Serde / JSON
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Contract generation: JSON Schema for the MCP tool surface (D-4). Already in
# the tree via rmcp, so deriving from it costs no new dependency.
schemars = "1"
# TypeScript generation for the web client (D-4). Emits .ts files from a test
# target, so it never runs in a release build.
ts-rs = "12"

# Time / IDs
time = { version = "0.3", features = ["serde", "serde-well-known", "macros", "formatting", "parsing"] }
jiff = "0.2"
uuid = { version = "1", features = ["v4", "serde"] }

# Errors / logging
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# MCP
rmcp = { version = "1.7", features = ["server", "transport-streamable-http-server"] }

# HTTP server
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
http-body-util = "0.1"

# Test helpers
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
