[package]
name = "korg-mcp"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
korg-core = { path = "../korg-core" }
rmcp = { workspace = true }
sqlx = { workspace = true }
rust_decimal = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
korg-test-support = { workspace = true }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
