[package]
name = "korg-migrate"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "korg-migrate"
path = "src/main.rs"

[dependencies]
korg-core = { path = "../korg-core" }
sqlx = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
korg-test-support = { workspace = true }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
